[package]
name = "ieee80211"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/ieee80211-rs"
description = "A parser for IEEE 802.11 frames."
authors = ["Frostie314159"]

[dependencies]
bitfield-struct = "0.6.0"
const_soft_float = { version = "0.1.4", features = ["no_std"] }
crc32fast = { version = "1.3.2", default-features = false }
itertools = "0.12.1"
mac-parser = "0.1.4"
macro-bits = "0.1.4"
scroll = { version = "0.12.0", default-features = false }
tlv-rs = "0.2.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ieee80211"
harness = false

[features]
std = []
default = ["std"]
