[package]
name = "ieee80211"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/ieee80211-rs"
description = "A parser for IEEE 802.11 frames."
authors = ["Frostie314159"]
rust-version = "1.65.0"

[dependencies]
bitfield-struct = "0.8.0"
const_soft_float = { version = "0.1.4", features = ["no_std"] }
crc32fast = { version = "1.3.2", default-features = false }
defmt = { version = "0.3.8", optional = true }
hmac = { version = "0.12.1", optional = true }
mac-parser = { version = "0.1.6", features = ["defmt"] }
macro-bits = "0.1.4"
num = { version = "0.4.3", default-features = false }
pbkdf2 = { version = "0.12.2", optional = true }
scroll = { version = "0.12.0", default-features = false, features = ["derive"] }
sha1 = { version = "0.10.6", default-features = false, optional = true }
tlv-rs = "0.2.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = { version = "0.4.3", default-features = false }

[[bench]]
name = "ieee80211"
harness = false

[features]
alloc = []
crypto = ["dep:pbkdf2", "dep:hmac", "dep:sha1"]
default = ["crypto"]
std = ["alloc", "scroll/std"]
defmt = ["dep:defmt"]
