[package]
name = "ieee80211"
version = "0.5.6"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/ieee80211-rs"
description = "A parser for IEEE 802.11 frames."
authors = ["Frostie314159"]
rust-version = "1.87.0"

[dependencies]
bitfield-struct = "0.11.0"
const_soft_float = { version = "0.1.4", features = ["no_std"] }
crc32fast = { version = "1.3.2", default-features = false }
defmt = { version = "1.0.1", optional = true }
hmac = { version = "0.12.1", optional = true }
mac-parser = { version = "0.2.0" }
macro-bits = "0.1.5"
num = { version = "0.4.3", default-features = false }
pbkdf2 = { version = "0.12.2", optional = true }
scroll = { version = "0.13.0", default-features = false, features = ["derive"] }
sha1 = { version = "0.10.6", default-features = false, optional = true }
sha2 = { version = "0.10.9", optional = true, default-features = false }
tlv-rs = "0.3.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
hex = "0.4.3"

[[bench]]
name = "ieee80211"
harness = false

[features]
alloc = []
crypto = ["dep:pbkdf2", "dep:hmac", "dep:sha1", "dep:sha2"]
default = ["crypto"]
std = ["alloc", "scroll/std"]
defmt = ["dep:defmt", "mac-parser/defmt"]
